--- a/style.css
+++ b/style.css
@@ -145,14 +145,37 @@ html, body {
     object-fit: cover;
     display: block;
 }
-.poster-1 { top: 8.75%; right: 8%; width: 30%; height: 21.25%; transform: rotate(3deg); --rotate: 3deg; z-index: 5; }
-.poster-2 { top: 12.5%; left: 12%; width: 32%; height: 17.5%; transform: rotate(-3deg); --rotate: -3deg; z-index: 6; }
 
-.note-3 { top: 5%; left: 32%; width: 22%; height: 7.5%; background-color: #a4e3e8; transform: rotate(2deg); --rotate: 2deg; z-index: 7; }
+/* --- NEW TIKTOK NOTE STYLES --- */
+.tiktok-note {
+    top: 4%;
+    left: 4%;
+    width: 25%;
+    height: 48%; /* Taller to fit vertical video */
+    transform: rotate(-6deg);
+    --rotate: -6deg; /* For hover effect */
+    z-index: 7;
+    padding: 0.5em; /* Small border around video */
+    background-color: #fefefe;
+    overflow: hidden; /* Hide anything that spills out */
+}
+.tiktok-note::before {
+    display: none; /* No tape on the video */
+}
+.tiktok-note blockquote {
+    margin: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+}
+
+.poster-1 { top: 8.75%; right: 8%; width: 30%; height: 21.25%; transform: rotate(3deg); --rotate: 3deg; z-index: 5; }
+.poster-2 { top: 12.5%; left: 32%; width: 32%; height: 17.5%; transform: rotate(-3deg); --rotate: -3deg; z-index: 6; }
+
+.note-3 { top: 5%; left: 68%; width: 22%; height: 7.5%; background-color: #a4e3e8; transform: rotate(2deg); --rotate: 2deg; z-index: 7; }
 .note-4 { top: 33%; left: 71%; width: 22%; height: 11.25%; background-color: #fefefe; transform: rotate(-5deg); --rotate: -5deg; font-size: 3em; color: #d1453b; font-weight: bold; border: 0.2em solid #333; z-index: 9; cursor: pointer; }
 
 .note-5 { 
-    top: 28%; left: 6%; 
+    top: 55%; left: 6%; 
     width: 48%; height: 28%; 
     background-color: #d2b48c; 
     border: 1.5em solid #5E2C04; 
