--- a/style.css
+++ b/style.css
@@ -145,47 +145,14 @@ html, body {
     object-fit: cover;
     display: block;
 }
-
-/* --- NEW TIKTOK NOTE STYLES --- */
-.tiktok-note {
-    /* Adjusted position and size */
-    top: 5%; /* Moved down slightly */
-    left: 10%; /* Moved right slightly to be more inside blue box */
-    width: 40%; /* Wider to fit video better */
-    height: 40%; /* Adjusted height */
-    transform: rotate(-6deg);
-    --rotate: -6deg;
-    z-index: 100; /* VERY HIGH z-index to be on top of everything */
-    padding: 0.5em; 
-    background-color: #fefefe;
-    overflow: hidden; 
-}
-.tiktok-note::before {
-    display: none; 
-}
-.tiktok-note blockquote {
-    margin: 0 !important;
-    width: 100% !important;
-    height: 100% !important;
-}
-
-/* Adjusted positions of existing elements */
 .poster-1 { top: 8.75%; right: 8%; width: 30%; height: 21.25%; transform: rotate(3deg); --rotate: 3deg; z-index: 5; }
-.poster-2 { 
-    top: 55%; /* Moved to the new location */
-    left: 65%; /* Moved to the new location */
-    width: 32%; 
-    height: 17.5%; 
-    transform: rotate(-3deg); 
-    --rotate: -3deg; 
-    z-index: 6; 
-}
+.poster-2 { top: 12.5%; left: 12%; width: 32%; height: 17.5%; transform: rotate(-3deg); --rotate: -3deg; z-index: 6; }
 
-.note-3 { top: 5%; left: 68%; width: 22%; height: 7.5%; background-color: #a4e3e8; transform: rotate(2deg); --rotate: 2deg; z-index: 7; }
-.note-4 { top: 33%; left: 71%; width: 22%; height: 11.25%; background-color: #fefefe; transform: rotate(-5deg); --rotate: -5deg; font-size: 3em; color: #d1453b; font-weight: bold; border: 0.2em solid #333; z-index: 90; cursor: pointer; } /* Increased z-index */
+.note-3 { top: 5%; left: 32%; width: 22%; height: 7.5%; background-color: #a4e3e8; transform: rotate(2deg); --rotate: 2deg; z-index: 7; }
+.note-4 { top: 33%; left: 71%; width: 22%; height: 11.25%; background-color: #fefefe; transform: rotate(-5deg); --rotate: -5deg; font-size: 3em; color: #d1453b; font-weight: bold; border: 0.2em solid #333; z-index: 9; cursor: pointer; }
 
 .note-5 { 
-    top: 55%; left: 6%; 
+    top: 28%; left: 6%; 
     width: 48%; height: 28%; 
     background-color: #d2b48c; 
     border: 1.5em solid #5E2C04; 
@@ -227,7 +194,7 @@ html, body {
     font-family: 'Roboto Mono', monospace;
     font-size: 0.9em;
     color: #888;
-    z-index: 12; 
+    z-index: 11;
 }
 
 /* Explosion Easter Egg Styles */
